--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon index.js",
+        "start": "node index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "engines": {
-        "node": "16.14.0"
+        "node": "16.x"
     },
     "dependencies": {
         "axios": "^0.27.2",
