update index new

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGO_URL = mongodb+srv://kayode:oct1088@cluster0.j6g8b.mongodb.net/rapidsmm?retryWrites=true&w=majority
-URL_PORT = 8080
+PORT = 8080
 SECRET_KEY = ShopLength7
 JWT_KEY = SHOPPINGKEY
 CLIENT_ID= 309986244915-tpba8ssgll2oq5mb2qmk4fjm8mrne0nr.apps.googleusercontent.com
