--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "start": "nodemon index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+		"swagger-autogen": "node ./swagger.js"
     },
     "keywords": [],
     "author": "",
@@ -14,6 +15,7 @@
         "node": "16.x"
     },
     "dependencies": {
+        "and": "^0.0.3",
         "axios": "^0.27.2",
         "coinbase-commerce-node": "^1.0.4",
         "cors": "^2.8.5",
@@ -32,6 +34,8 @@
         "passport": "^0.6.0",
         "passport-google-oauth2": "^0.2.0",
         "qs": "^6.11.0",
+        "swagger-autogen": "^2.21.5",
+        "swagger-ui-express": "^4.5.0",
         "uuid": "^8.3.2"
     }
 }
